# Light-Engine-Foxtrot

./: --order-by LastEventTime   .dockerignore  .ebignore  .env.aws.deployment  .env.aws.example  .env.demo  .env.example  .env.python  .env.python.example  .env.rds  .gcloudignore  .gitignore  ACCEPTANCE_TEST_RESULTS.md  ACTIVITY_HUB_BUG_REPORT.md  ACTIVITY_HUB_EDGE_DEVICE_READINESS_REPORT.md  ACTIVITY_HUB_IMPLEMENTATION_READINESS.md  ACTIVITY_HUB_QR_SETUP.md  ACTIVITY_HUB_WHOLESALE_PILOT_READINESS.md  ADMIN_AUTH_DEPLOYMENT.md  ADMIN_AUTH_IMPLEMENTATION.md  ADMIN_NAVIGATION_GUIDE.md  AGENT_FAILURE_FORENSIC_ANALYSIS_2026-02-01.md  AI_AGENT_DOCUMENTATION.md  AI_AGENT_OPERATING_ACTION_PLAN_2026-02-21.md  AI_ASSISTANT_CAPABILITIES_REVIEW.md  AI_CROP_RECOMMENDATION_PROPOSAL.md  AI_GAPS_AND_OPPORTUNITIES.md  AI_IMPLEMENTATION_PROGRESS_REPORT.md  AI_INTEGRATION_PROPOSAL.md  AI_VISION_READINESS_REPORT_2026-02-23.md  AI_VISION_REPORT.md  APP_FEATURE_OVERVIEW.md  ARCHITECTURE_AGENT_ASSESSMENT.md  ARCHITECTURE_AGENT_IMPLEMENTATION_PLAN_2026-02-28.md  ARCHITECTURE_CHARLIE_DEPRECATION_PLAN.md  ARCHITECTURE_COMPLETE_PHASE_PLAN_FOR_REVIEW_2026-02-26.md  AWS_DEMO_URL.txt  AWS_DEPLOYMENT_URLS.md  AWS_INSTALLER_HOSTING_SETUP.md  AWS_SES_PRODUCTION_ACCESS.md  (+273 more)
.ebextensions/: 01_install_central_deps.config  01_restart_app.config  01_root_directory.config  02_deployment_policy.config  03_npm_install.config  environment.config  https-redirect.config  https-redirect.config.disabled  nodejs.config
.elasticbeanstalk/: config.yml
.githooks/: pre-commit  pre-push
.github/: AGENT_GUARDRAILS.md  AGENT_SKILLS_FRAMEWORK.md  (+29 more)
examples/python-client/: .gitignore  LICENSE  MANIFEST.in  README.md  examples.py  pyproject.toml
examples/python-client/light_engine/: __init__.py  client.py  exceptions.py  models.py
(+2236 files in other folders)
