[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "light-engine-client"
version = "1.0.0"
description = "Python SDK for Light Engine Charlie API"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Light Engine Charlie Team"}
]
keywords = ["api", "client", "indoor-farming", "iot", "agriculture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/greenreach2024/Light-Engine-Echo"
Documentation = "https://github.com/greenreach2024/Light-Engine-Echo/tree/master/examples/python-client"
Repository = "https://github.com/greenreach2024/Light-Engine-Echo"

[tool.setuptools.packages.find]
include = ["light_engine*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
